# third-eye

./: .dockerignore  Dockerfile  README.md  TODO  docker-compose.yml  pyproject.toml  run_dashboard.py  setup.cfg
.githooks/: pre-commit
.streamlit/: config.toml
app/: __main__.py  config.py  dashboard.py  graphs.py  models.py  schema.py  support_resistance.py  sync.py  tinkoff.py  utils.py
migrations/models/: 0_20210228045139_init.sql  0_20210228200658_init.sql  1_20210424221031_rename-interval-to-timeframe.sql
